Fixed Login Form overflow when virtual keyboard opens up in smart phone devices

--- a/src/App.css
+++ b/src/App.css
@@ -66,10 +66,7 @@ input{
           }
   
           @media (max-width: 480px) and (orientation: landscape){
-  
-              body{
-                  background-color: green;
-              }
+
               
           }
             
